--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zentamon.note_app">
    <application
-        android:label="note_app"
+        android:label="Easy Notes"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
